# liga-magic-optimize

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: opencode-bridge.mdc
.devcontainer/: devcontainer.json  post-install.sh
config/: default.yaml
data/input/: cube.txt
docker/: Dockerfile  Dockerfile.prod  entrypoint.sh
scripts/: analyze_debug.py  test_parser.py
src/cube_budget/: __init__.py  main.py
src/cube_budget/cache/: __init__.py  manager.py  policy.py
src/cube_budget/cli/: display.py
src/cube_budget/cli/commands/: clean.py  doctor.py  export.py  optimize.py  report.py  stats.py  update_cache.py
src/cube_budget/config/: __init__.py  loader.py  schema.py
src/cube_budget/core/: __init__.py  constants.py  exceptions.py  models.py
src/cube_budget/database/: __init__.py  connection.py  migrations.py  schema.sql
src/cube_budget/database/repositories/: __init__.py  cache_repo.py  card_repo.py  (+3 more)
src/cube_budget/optimizer/: __init__.py  engine.py  matrix.py  result.py
src/cube_budget/providers/: __init__.py
src/cube_budget/reports/: __init__.py  csv_report.py  excel.py  markdown.py  summary.py
src/cube_budget/services/: __init__.py  card_reader.py  name_normalizer.py  orchestrator.py
src/cube_budget/utils/: __init__.py  logger.py  progress.py  retry.py  text.py
tests/: conftest.py
tests/fixtures/: sample_cube.txt
tests/fixtures/sample_html/: card_page.html
tests/integration/: test_database.py  test_full_pipeline.py  test_orchestrator.py  test_reports.py  test_scraper_mock.py
tests/unit/: test_cache_policy.py  test_card_match.py  test_card_reader.py  test_cli.py  test_config.py  test_doctor.py  test_greedy.py  test_ilp.py  test_logger.py  test_matrix.py  test_normalizer.py  test_objective.py  test_ortools.py  test_rate_limiter.py  test_retry.py  test_text_utils.py
(+15 files in other folders)
