[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-budget-optimizer"
version = "0.1.0"
description = "Optimize Magic card purchases across LigaMagic stores"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Cube Budget Team" }]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pulp>=2.8.0",
    "ortools>=9.9.0",
    "rapidfuzz>=3.6.0",
    "unidecode>=1.3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "types-PyYAML",
    "types-openpyxl",
]

[project.scripts]
cube-budget = "cube_budget.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cube_budget = ["database/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/cube_budget"]
branch = true
omit = [
    "src/cube_budget/providers/ligamagic/navigator.py",
    "src/cube_budget/providers/ligamagic/scraper.py",
    "src/cube_budget/providers/browser/pool.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
